--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,6 @@ jobs:
           ssh -i key.pem -o StrictHostKeyChecking=no root@${{ secrets.MACHINE_IP }} "
             cd ~/cicd-portfolio &&
             git pull &&
+            sudo docker compose down &&
             sudo docker compose up -d
           "
