--- a/compose.yaml
+++ b/compose.yaml
@@ -6,4 +6,8 @@ services:
     volumes:
       - ./file:/app
     working_dir: /app
-    command: go run main.go
+    command:
+        - sh
+        - -c
+        - |
+          go build -o portfolio main.go && ./portfolio
